CPTD_CLI/v214/cptd_tools/instruction.md
## 🔹 List of Basic Commands

The following commands are available in the CPTD CLI:

| Command           | Purpose                                                                              | Avalible |
|--------------     |--------------------------------------------------------------------------------------|----------|
| `about`           | Shows information about CPTD CLI                                                     |  yes     |
| `list`            | Displays all available commands                                                      |  yes     |
| `dsl`             | Management of personal affairs through the declared DSL language, maintainin         |  yes     |
|                   | ToDo in markdown files                                                               |  yes     |
| `newcommand`      | Generates a template for a new CLI command (for developers)                          |  yes     |
| `history`         | View, search, clear, or export the CPTD CLI command history                          |  yes     |
| `command`         | Add, delete, or list custom CLI commands                                             |  yes     |
| `cpdsl`           | Interprets and executes .dsl registered CPTD CLI commands                            |  yes     |
| `install`         | Installing commands from the CPTD repository                                         |  yes     |
| `gitauto`         | Run git commands defined in a YAML workflow file                                     |  yes     |
| `runner`          | Run Bash,PowerShell commands defined in a YAML workflow file                         |  yes     |


> ⚠️ Note: The CLI is under active development and not yet ready for production use.
